src/style.scss
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');

:root {
    --term-font: "Roboto Mono", monospace;
    --term-padding: 5px 10px 5px 10px;
    --term-font-size: 1.5rem;
    --term-color: rgb(var(--color-text));
    --term-border-radius: 5px;
    --sub-proof-border-left: 5px solid rgb(var(--color-fg1));

    --text-font: "Quicksand", sans-serif;
    --color-text: 255, 255, 255;
    --color-bg1: 11, 19, 43;
    --color-bg2: 28, 37, 65;
    --color-bg3: 58, 80, 107;
    --color-fg1: 205, 84, 46;
    --color-fg2: 46, 99, 165;
    // --color-fg1: 236, 163, 177;
    // --color-fg2: 87, 199, 241;
    --color-fg3: 37, 131, 0;
    --color-fg4: 91, 97, 188;
    --app-max-width: 900px;

    --app-border-radius: 5px;
    --app-border-padding: 0px;

    --button-margin: 5px;
    --button-border: solid white 5px;
}

* {
    color: rgb(var(--color-text));
}

button {
    color: white;
    background-color: rgb(var(--color-fg4));
    border-radius: var(--term-border-radius);
    font-size: var(--term-font-size);
    font-family: var(--term-font);
    min-width: calc(var(--term-font-size) * 2);
    border-width: var(--term-border-radius);
    margin: var(--button-margin);
    cursor: pointer;
    border: var(--button-border);
}


body {
    background-color: rgb(var(--color-bg1));
    margin: 0;
    padding: 0;
}

.info-screen-title {
    text-align: center;
    font-family: var(--text-font);
}

.info-screen-text {
    overflow: auto;
    font-family: var(--text-font);


    p {
        font-size: 1.3em;
        text-align: left;
        padding: 0px 20px 0px 20px;

        span {
            filter: hue-rotate(300deg) contrast(100%) brightness(3);
            animation: crabby 3s infinite;
        }

        @keyframes crabby {
            0% {
                filter: hue-rotate(220deg) contrast(100%) brightness(3);
            }

            50% {
                filter: hue-rotate(300deg) contrast(100%) brightness(3);
            }

            100% {
                filter: hue-rotate(220deg) contrast(100%) brightness(3);
            }
        }
    }
}

.result-container {
    text-align: center;
}

.sub-proof {
    display: flex;
    flex-direction: column;

    >.sub-proof {
        margin-left: 5px;
        padding-left: 15px;
        border-left: var(--sub-proof-border-left);
        margin-top: 7px;
        margin-bottom: 7px;
        box-shadow: -5px 0px 3px -3px rgba(0, 0, 0, 0.25);
        border-radius: 5px 0 0 5px;
    }

    >.term-line>.term {
        min-width: 60px;
    }
}

.term-line-container {
    display: flex;
    width: 100%;
}


.term {
    font-family: var(--term-font);
    padding: var(--term-padding);
    font-size: var(--term-font-size);
    color: var(--term-color);
    border-radius: var(--term-border-radius);
    position: relative;
    display: inline-block;

    margin-bottom: 10px;
    text-align: center;
    user-select: none;
    -webkit-user-select: none;
    cursor: pointer;
    white-space: nowrap;

    .term {
        margin-bottom: 0;
    }
}

.term-repeat-1 {
    box-shadow: 0px 5px 0px 0px rgba(var(--color-fg1), 0.75);
    background-color: rgb(var(--color-fg1));
}

.term-repeat-2 {
    box-shadow: 0px 5px 0px 0px rgba(var(--color-fg2), 0.75);
    background-color: rgb(var(--color-fg2));
}

.term-selected {
    background-color: rgb(var(--color-fg3)) !important;
    box-shadow: 0px 5px 0px 0px rgba(var(--color-fg3), 0.75) !important;
}

.term-selected::after {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: calc(100% + 5px);
    background-color: transparent;
    border-radius: var(--term-border-radius);
    outline: white 1px solid;
    user-select: none;
    pointer-events: none;
    -webkit-user-select: none;
}

.term::before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: calc(100% + 5px);
    border-radius: var(--term-border-radius);
    background-color: transparent;
    box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.15);
    user-select: none;
    -webkit-user-select: none;
    pointer-events: none;
}


.app-outer {
    position: absolute;
    left: 0;
    right: 0;
    display: flex;
    justify-content: center;
    height: 100%;
    width: 100%;
    overflow: auto;
}

.app-container {
    max-width: var(--app-max-width);
    width: 100%;
    background-color: rgb(var(--color-bg2));
    border-radius: var(--app-border-radius);
    padding: var(--app-border-padding);
    display: grid;
    grid-template-rows: 4em auto 1fr 132px;
}

.app-container-info {
    grid-template-rows: 4em 1fr 4em;
}

.title {
    font-family: var(--text-font);
    font-size: 3em;
    text-align: center;

    span {
        font-family: (var(--term-font));
    }
}

// .term::before {
//     position: absolute;
//     left: 0;
//     top: 0;
//     width: calc(100% - 20px);
//     height: calc(100% - 5px);
//     content: "";
//     background-color: inherit;
//     filter: brightness(80%);
//     padding: var(--term-padding);
//     font-size: var(--term-font-size);
//     border-radius: var(--term-border-radius);
// }

.term-rule {
    display: flex;
    align-items: center;
    font-family: var(--term-font);
    font-size: var(--term-font-size);
    color: var(--term-color);
    line-height: 0;

    padding-right: 25px;
    padding-left: 25px;
    background: transparent;
}

.term-line-number {
    display: flex;
    align-items: center;
    font-family: var(--term-font);
    font-size: var(--term-font-size);
    color: var(--term-color);
    line-height: 0;

    padding-right: 25px;
    background: transparent;
}


.term-line {
    display: flex;
    justify-content: space-between;
    width: 100%;
}


.sub-proof-outer {
    overflow: auto;
}

.result-line {
    display: flex;
    justify-content: center;
}

.keyboard {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    background-color: rgb(var(--color-bg3));

    .keyboard-inner {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        max-width: 500px;
    }
}

